# MIT-Language-Modeling-Toolkit

./: .gitignore  Makefile.am  README.MACOSX  autogen.sh  configure.ac  valgrinded.sh
.debug/: README.md  setbreak.txt  test-estimate-ngram
src/: CrossFolder.h  KneserNeySmoothing.cpp  Lattice.cpp  LiveGuess.cpp  LiveGuess.h  NgramModel.cpp  PerplexityOptimizer.cpp  PerplexityOptimizer.h  estimate-ngram.cpp
src/util/: CommandOptions.h  FakeZFile.h  FastIO.h  Logger.cpp  RefCounter.cpp  RefCounter.h  ZFile.h
src/vector/: Operations.h
